--- a/resources/js/Pages/Directions/Components/styles.css
+++ b/resources/js/Pages/Directions/Components/styles.css
@@ -3,7 +3,6 @@
     flex-direction: row;
     align-items: center;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 50, .2);
-    margin-right: 10%;
     margin-bottom: 5%;
     padding: 2%;
     border-radius: 10px;
@@ -11,6 +10,11 @@
 
 .border-radius-icon {
     border-radius: 100%;
+}
+
+.border-radius-icon img{
+    width: 100%;
+    height: 100%;
 }
 
 .container-card:hover {
@@ -30,5 +34,6 @@
 
 .desc-card {
     font-size: 14px;
-    color: var(--tg-theme-text-color);
+    color: #000000c4;
+    font-weight: lighter;
 }
