--- a/resources/js/Pages/Directions/styles.css
+++ b/resources/js/Pages/Directions/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .header-image {
     width: 100%;
     height: 5%;
@@ -12,5 +17,6 @@
 .header-text {
     margin-bottom: 5%;
     font-size: 14px;
-    color: var(--tg-theme-text-color);
+    color: #000000c4;
+    font-weight: 700;
 }
