--- a/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
+++ b/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
@@ -10,13 +10,19 @@
 .report-container {
     /*box-shadow: 0px 0px 5px 5px rgba(0, 0, 10, .2);*/
     margin-bottom: 5%;
+    margin-top: 4%;
     border-radius: 10px;
     padding: 2%;
+    box-shadow: 0px 0px 3px 0.1px black;
+}
+
+hr {
+    background-color: var(--tg-theme-text-color);
 }
 
 .container {
     min-height: 94vh;
-    margin-top: 0;
+    margin: 2%;
 }
 
 .content {
