Переделан интерфейс под IOS и MacOS Добавлена статиска о времени прохождения границы с Белрауси. При создании отчета подставляется tg id пользователя Добавлен новый вид транспорта: Пешеход Отображение во всех отчетах тип транспорта Аккордеон длинные строки отображает нормально теперь Заменены все изображения Заполнены данные продовыми

--- a/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
+++ b/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
@@ -22,10 +22,13 @@ hr {
 
 .container {
     min-height: 94vh;
-    margin: 2%;
 }
 
-.content {
+.tgui-8af0d10d5540c6cc {
+    opacity: 0;
+}
+
+  .content {
     flex: 1; /* Занимает всё доступное пространство, оставляя кнопку внизу */
 }
 
@@ -50,6 +53,14 @@ hr {
 
 .label-img-margin {
     margin-right: 2%;
+}
+
+.title-section header h1 {
+    font-size: 20px;
+}
+
+.subtitle-section header h1{
+    font-size: 15px;
 }
 
 .transport-container {
