--- a/resources/js/Pages/Directions/styles.css
+++ b/resources/js/Pages/Directions/styles.css
@@ -5,7 +5,6 @@
 
 .header-image {
     width: 100%;
-    height: 200px;
 }
 
 .container {
@@ -19,6 +18,22 @@
     font-size: 14px;
     color: #000000c4;
     font-weight: 700;
+}
+
+.overlay-text-direction {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    margin-left: 4%;
+    color: white;
+    font-weight: bold;
+}
+
+.overlay-text-direction span {
+    font-size: 30px;
+}
+
+.tgui-65c206f0fd891b6b {
 }
 
 .title-crossing-container {
