Добавлен функционал удаления отчетов для пользователей в течении часа после созданиия Функционал на главном экране "Связаться с разработчиком" - перводит в рабочий чат компании Исправлена логика валидации полей для автобусов из Беларуси Изменен текст на странице со всеми отчетами для автобусов Подключено логирование к elasticsearch Добавлено уведомление (Snackbar) для ошибки при удалении В отчетах добавлено новое поле в БД "Дата создания отчета" заноситься автоматически время текущее сервера Подправлен Swagger

--- a/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
+++ b/resources/js/Pages/BorderCrossing/Reports/reports-styles.css
@@ -45,9 +45,12 @@ hr {
 }
 
 .snackbar {
-    position: fixed;
-    bottom: 20px; /* Отступ от низа */
-    z-index: 1000; /* Убедитесь, что snackbar выше других элементов */
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.snackbar-show {
+    opacity: 1;
 }
 
 
