--- a/resources/js/Pages/Directions/styles.css
+++ b/resources/js/Pages/Directions/styles.css
@@ -50,3 +50,15 @@
     justify-content: space-between;
     margin-bottom: 3%;
 }
+
+.bottom-button-container {
+    position: fixed;
+    left: 50%;
+    bottom: 20px; /* Расстояние от нижней части экрана */
+    transform: translateX(-50%);
+    z-index: 1000; /* Обеспечивает, что кнопка будет на переднем плане */
+    display: flex;
+    justify-content: center;
+    width: 100%; /* Для того, чтобы кнопка всегда была в центре */
+}
+
