--- a/resources/js/Pages/BorderCrossing/border-info-styles.css
+++ b/resources/js/Pages/BorderCrossing/border-info-styles.css
@@ -10,6 +10,20 @@
     height: 80%;
 }
 
+.stat-logo-last {
+    margin-right: 2%;
+}
+
+.stat-container {
+    width: 120%;
+    display: flex;
+    align-items: center;
+}
+
+.first-elem-logo {
+    margin-left: 2%;
+}
+
 .report-list:hover {
     cursor: pointer;
     opacity: 80%;
@@ -36,4 +50,5 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    margin-bottom: 5%;
 }
