--- a/resources/js/Pages/Directions/styles.css
+++ b/resources/js/Pages/Directions/styles.css
@@ -7,6 +7,10 @@
     width: 100%;
 }
 
+.header-image-direction {
+    width: 100%;
+}
+
 .container {
     display: flex;
     flex-direction: column;
