Новая логика для отображения полей у Берста Заменены изображения Добавлены кнопки для перехода в ТГ канал перехода Добавлена возможноть логировать фронт Формирование графиков

--- a/resources/js/Pages/BorderCrossing/border-info-styles.css
+++ b/resources/js/Pages/BorderCrossing/border-info-styles.css
@@ -76,6 +76,11 @@
 
 }
 
+.bottom-button-chattg-container {
+    display: flex;
+    justify-content: center;
+}
+
 .tab-style {
     height: 0;
     white-space: normal;
