--- a/resources/js/Pages/Directions/styles.css
+++ b/resources/js/Pages/Directions/styles.css
@@ -63,6 +63,7 @@
     width: 100%;
     justify-content: space-between;
     margin-bottom: 3%;
+    align-items: center;
 }
 
 .bottom-button-container {
