Возможность указывать кол-во машин до КПП
Пофиксил отправку отчетов в ТГ канал @poputchikiidom39
Так же убрал кнопку "Отравить", теперь mainbutton, т.е. изначальная кнопка "Добавить отчет" меняется на "Отправить" при открытие этого модального окна, при закрытие, обратно в исходное состояние возвращается кнопка, т.е. в "Добавить отчет"
Твои отчеты по кол-ву машин, теперь не будут присылаться в ТГ, а так же в сообщении добавил строку, указывающую сколько пользователь указал машин

--- a/resources/js/Pages/BorderCrossing/border-info-styles.css
+++ b/resources/js/Pages/BorderCrossing/border-info-styles.css
@@ -116,3 +116,24 @@
     font-size: 12px;
 }
 
+.to {
+    display: flex;
+    align-items: center;
+}
+
+.to-reverse {
+    display: flex;
+    align-items: center;
+}
+
+.stat-container-car-queue {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.route-container {
+    display: flex;
+    align-items: center;
+}
+
